<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:padding="25dp"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:scrollbarThumbVertical="@null">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:text="Supervisor's Registration"
                android:layout_height="wrap_content">

            </TextView>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/white"
                android:layout_centerHorizontal="true"
                android:background="@drawable/round_background"
                android:padding="15dp"
                android:layout_marginBottom="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/camera"/>

            <androidx.cardview.widget.CardView
                xmlns:Card_View="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                Card_View:contentPadding="10dp"
                Card_View:cardCornerRadius="5dp"
                Card_View:cardElevation="5dp">
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/firstNameError"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="20dp">

                            <EditText
                                android:id="@+id/firstName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:hint="@string/first_name"
                                android:inputType="textNoSuggestions"
                                android:maxLines="1"
                                android:paddingStart="5dp"
                                android:singleLine="true"
                                android:paddingLeft="5dp" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/lastNameError"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp">

                            <EditText
                                android:id="@+id/lastName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:hint="@string/last_name"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:paddingLeft="5dp"
                                android:paddingStart="5dp"
                                android:singleLine="true"/>

                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/emailError"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp">

                            <EditText
                                android:id="@+id/email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:hint="@string/email"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:paddingLeft="5dp"
                                android:paddingStart="5dp"
                                android:singleLine="true"/>

                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/addressError"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp">

                            <EditText
                                android:id="@+id/address"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:hint="@string/select_address"
                                android:clickable="true"
                                android:focusable="false"
                                android:inputType="none"
                                android:maxLines="1"
                                android:paddingLeft="5dp"
                                android:paddingStart="5dp"
                                android:singleLine="true"/>

                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/phoneError"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp">

                            <EditText
                                android:id="@+id/phone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:hint="@string/contact_number"
                                android:maxLength="12"
                                android:inputType="number"
                                android:maxLines="1"
                                android:paddingLeft="5dp"
                                android:paddingStart="5dp"
                                android:singleLine="true"/>

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/designationError"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/designation"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:hint="@string/designation"
                                android:inputType="textNoSuggestions"
                                android:maxLines="1"
                                android:paddingStart="5dp"
                                android:singleLine="true"
                                android:paddingLeft="5dp" />

                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/employeeNoError"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp">

                            <EditText
                                android:id="@+id/employeeNo"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:hint="@string/employee_no"
                                android:inputType="number"
                                android:maxLength="6"
                                android:maxLines="1"
                                android:paddingLeft="5dp"
                                android:paddingStart="5dp"
                                android:singleLine="true"/>

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/passError"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:passwordToggleEnabled="true"
                            android:layout_marginTop="5dp">

                            <EditText
                                android:id="@+id/password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:hint="@string/create_password"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:paddingLeft="5dp"
                                android:paddingStart="5dp"
                                android:singleLine="true"/>

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/confPassError"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:passwordToggleEnabled="true"
                            android:layout_marginTop="5dp">

                            <EditText
                                android:id="@+id/confPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:hint="@string/conf_password"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:paddingLeft="5dp"
                                android:paddingStart="5dp"
                                android:singleLine="true"/>

                        </com.google.android.material.textfield.TextInputLayout>



                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center|left"
                            android:layout_marginTop="10dp"
                            android:text="@string/uploadDocuments"
                            android:textColor="@color/colorPrimary"
                            android:textSize="16sp"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_marginTop="10dp"
                            android:layout_height="45dp">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:id="@+id/lilDocument"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:background="@drawable/document_backgroud"
                                android:layout_height="45dp">
                                <TextView
                                    android:padding="10dp"
                                    android:id="@+id/txtDocumentName"
                                    android:layout_gravity="center"
                                    android:gravity="center"
                                    android:layout_width="match_parent"
                                    android:text="@string/documentDetails"
                                    android:textColor="@color/colorPrimary"
                                    android:textSize="16sp"
                                    android:layout_height="wrap_content">
                                </TextView>
                            </LinearLayout>
                        </LinearLayout>

                        <Button
                            android:id="@+id/register"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_margin="20dp"
                            android:backgroundTint="@android:color/holo_orange_dark"
                            android:text="@string/register"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"/>

                        <TextView
                            android:id="@+id/login"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:gravity="center"
                            android:text="@string/already_register"
                            android:textColor="@color/colorPrimary"
                            android:textSize="16sp"/>

                    </LinearLayout>
                </ScrollView>


            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>